// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ZoneGroup matches snapshot 1`] = `
<ZoneGroup
  group={
    Object {
      "ZoneGroupMember": Array [
        Object {
          "Coordinator": "true",
          "member": 1,
        },
      ],
      "host": "myhost",
    }
  }
  playStates={
    Object {
      "myhost": Object {
        "playing": true,
      },
    }
  }
  selectGroup={[MockFunction]}
  showManagement={[MockFunction]}
>
  <div
    className="not-selected zone-group"
    onClick={[Function]}
  >
    <ul>
      <Component
        key="0"
        member={
          Object {
            "Coordinator": "true",
            "member": 1,
          }
        }
      >
        <p
          className="member"
        />
      </Component>
    </ul>
    <div
      className="group-button"
      onClick={[Function]}
    >
      Group
    </div>
    <ZoneGroupPlayState
      playState={
        Object {
          "playing": true,
        }
      }
    >
      <p
        className="play-state"
      />
    </ZoneGroupPlayState>
  </div>
</ZoneGroup>
`;

exports[`ZoneGroup matches snapshot when selected 1`] = `
<ZoneGroup
  currentHost="myhost"
  group={
    Object {
      "ZoneGroupMember": Array [
        Object {
          "Coordinator": "true",
          "member": 1,
        },
      ],
      "host": "myhost",
    }
  }
  playStates={
    Object {
      "myhost": Object {
        "playing": true,
      },
    }
  }
  selectGroup={[MockFunction]}
  showManagement={[MockFunction]}
>
  <div
    className="selected zone-group"
    onClick={[Function]}
  >
    <ul>
      <Component
        key="0"
        member={
          Object {
            "Coordinator": "true",
            "member": 1,
          }
        }
      >
        <p
          className="member"
        />
      </Component>
    </ul>
    <div
      className="group-button"
      onClick={[Function]}
    >
      Group
    </div>
    <ZoneGroupPlayState
      playState={
        Object {
          "playing": true,
        }
      }
    >
      <p
        className="play-state"
      />
    </ZoneGroupPlayState>
  </div>
</ZoneGroup>
`;
